# winmerge

Core/: CMakeLists.txt
